--- a/package.json
+++ b/package.json
@@ -16,9 +16,17 @@
     "dependencies": {
         "@brojs/cli": "^1.6.3",
         "@emotion/react": "^11.13.5",
+        "@emotion/styled": "^11.13.5",
+        "@hookform/resolvers": "^3.9.1",
+        "@reduxjs/toolkit": "^2.4.0",
+        "axios": "^1.7.8",
         "express": "^4.19.2",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-hook-form": "^7.54.0",
+        "react-redux": "^9.1.2",
+        "react-router-dom": "^7.0.1",
+        "yup": "^1.5.0"
     },
     "devDependencies": {
         "@types/react": "^18.3.12",
