--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "@brojs/cli": "^1.6.3",
         "@emotion/react": "^11.13.5",
         "@emotion/styled": "^11.13.5",
+        "@fortawesome/free-solid-svg-icons": "^6.7.2",
+        "@fortawesome/react-fontawesome": "^0.2.2",
         "@hookform/resolvers": "^3.9.1",
         "@reduxjs/toolkit": "^2.4.0",
         "axios": "^1.7.8",
@@ -24,6 +26,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.54.0",
+        "react-icons": "^5.4.0",
         "react-redux": "^9.1.2",
         "react-router-dom": "^7.0.1",
         "yup": "^1.5.0"
