--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "target": "es6",
     "jsx": "react",
     "typeRoots": ["node_modules/@types", "src/typings"],
-    "types": ["webpack-env", "jest", "node", "@testing-library/jest-dom"],
+    "types": ["webpack-env", "node"],
     "resolveJsonModule": true
   },
   "exclude": ["node_modules", "**/*.test.ts", "**/*.test.tsx", "node_modules/@types/jest"]
