--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "version": "0.0.0",
     "main": "./src/index.tsx",
     "scripts": {
-        "test": "jest",
-        "test:coverage": "jest --coverage",
+        "test": "echo \"Error: no test specified\" && exit 1",
         "start": "brojs server --port=8099 --with-open-browser",
         "build": "npm run clean && brojs build --dev",
         "build:prod": "npm run clean && brojs build",
@@ -33,16 +32,9 @@
         "yup": "^1.5.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.26.7",
-        "@babel/preset-env": "^7.26.7",
-        "@babel/preset-react": "^7.26.3",
-        "@testing-library/jest-dom": "^6.6.3",
-        "@testing-library/react": "^16.2.0",
         "@types/react": "^18.3.12",
         "@typescript-eslint/eslint-plugin": "^8.14.0",
         "@typescript-eslint/parser": "^8.14.0",
-        "babel-core": "^7.0.0-bridge.0",
-        "babel-jest": "^29.7.0",
         "eslint": "^9.14.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-import-resolver-typescript": "^3.6.3",
@@ -53,8 +45,6 @@
         "eslint-plugin-react-hooks": "^5.0.0",
         "file-loader": "^6.2.0",
         "globals": "^15.12.0",
-        "jest": "^29.7.0",
-        "jest-environment-jsdom": "^29.7.0",
         "prettier": "^3.3.3",
         "typescript-eslint": "^8.14.0"
     }
